--- a/resources/sass/layouts/_home.scss
+++ b/resources/sass/layouts/_home.scss
@@ -8,6 +8,11 @@
   }
 }
 
+main{
+  width: 100%;
+  overflow-x: hidden;
+}
+
 .section-languages {
   padding: 20rem 0;
   background-image: linear-gradient(
